--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <div class="banner-matter">
                 <h2>Software developer</h2>
                 <div class="my_foto">
-                <img src="images/photo.jpg" alt="Vadim Koshman" title="Vadim Koshman" />
-                    </div>
+                    <img src="images/photo.jpg" alt="Vadim Koshman" title="Vadim Koshman" />
+                </div>
             </div>
             <a href="#about" class="scroll arrow"><img src="images/arrow.png" alt=""></a>
         </div>
@@ -76,8 +76,9 @@
             <div class="about" id="about">
                 <div class="container">
                     <h3>ABOUT ME</h3>
-                    <p class="dummy-about">Instead of many words look into my CV <a href="">here</a></p>
-                   
+                    <p class="dummy-about">Hi there!<br>I'm always open for cooperation on any by a question.<br> Please don't hesitate to call or write me any time.<br> Instead of many words look into my CV
+                        <a href="">here</a></p>
+
                 </div>
             </div>
         </div>
@@ -88,10 +89,9 @@
                 <a href="#home" class="scroll footer-top"> <img src="images/drop.png" alt=""/></a>
 
                 <ul class="social-ic-icons">
-                    <li class="git"><a href="https://github.com/Antispiner"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                    <li class="vk"><a href="https://vk.com/pizhdeshnost"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                    <li class="facebook"><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li class="linked"><a href="https://www.linkedin.com/in/pizhdeshnost"><i class="fa fa-linkedin" aria-hidden="true"></i>
+                    <li class="git"><a href="https://github.com/Antispiner" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+
+                    <li class="linked"><a href="https://www.linkedin.com/in/pizhdeshnost" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
                     </li>
                 </ul>
@@ -104,4 +104,5 @@
         </div>
     </div>
 </body>
+
 </html>
