--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="header-top">
                 <div class="logo">
-                    <a href="vkoshman/KoshmanVadimResume.pdf" download>My CV</a>
+                    <a href="KoshmanVadimResume.pdf" download>My CV</a>
                 </div>
                 <div class="top-nav">
                     <button class="menu hamburger hamburger--collapse" type="button">
@@ -77,7 +77,7 @@
                 <div class="container">
                     <h3>ABOUT ME</h3>
                     <p class="dummy-about">Hi there!<br>I'm always open for cooperation on any by a question.<br> Please don't hesitate to call or write me any time.<br> Instead of many words look into my CV
-                        <a href="vkoshman/KoshmanVadimResume.pdf" download>here</a></p>
+                        <a href="KoshmanVadimResume.pdf" download>here</a></p>
 
                 </div>
             </div>
