--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="about" id="about">
                 <div class="container">
                     <h3>ABOUT ME</h3>
-                    <p class="dummy-about">Hi there!<br>I'm always open for cooperation on any by a question.<br> Please don't hesitate to call or write me any time.<br> Instead of many words look into my CV
+                    <p class="dummy-about">Hi there!<br>I'm always open for cooperation on any question.<br> Please don't hesitate to call or write me any time.<br> Instead of many words look into my CV
                         <a href="KoshmanVadimResume.pdf" download>here</a></p>
 
                 </div>
