--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <b class="yellow"> </b>
                 <ul class="social-ic-icons social-ic-icons-2">
                     <li class="skype"><span>skype: </span><a href="skype:treveldeath">treveldeath</a></li>
-                    <li class="email"><span>email: </span><a href="mailto:trevel007@mail.ru">trevel007@mail.ru</a></li>
+                    <li class="email"><span>email: </span><a href="mailto:v.koshman94@gmail.com">v.koshman94@gmail.com</a></li>
                 </ul>
             </div>
         </div>
