--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <ul class="social-ic-icons">
                     <li class="git"><a href="https://github.com/Antispiner" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 
-                    <li class="linked"><a href="https://www.linkedin.com/in/pizhdeshnost" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
+                    <li class="linked"><a href="https://www.linkedin.com/in/vkoshman" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
                     </li>
                 </ul>
