--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </ul>
                 <b class="yellow"> </b>
                 <ul class="social-ic-icons social-ic-icons-2">
-                    <li class="skype"><span>skype: </span><a href="skype:treveldeath">v.koshman94</a></li>
+                    <li class="skype"><span>skype: </span><a href="skype:v.koshman94">v.koshman94</a></li>
                     <li class="email"><span>email: </span><a href="mailto:v.koshman94@gmail.com">v.koshman94@gmail.com</a></li>
                 </ul>
             </div>
